@@ -53,6 +53,8 @@ _URJ_USB_FTDX(flyswatter)
 _URJ_USB_FTDX(gnice)
 _URJ_USB_FTDX(gniceplus)
 _URJ_USB_FTDX(jtagkey)
+_URJ_USB_FTDX(jtagv3)
+_URJ_USB_FTDX(jtagv5)
 _URJ_USB_FTDX(ktlink)
 _URJ_USB_FTDX(milkymist)
 _URJ_USB_FTDX(oocdlinks)
