@@ -53,6 +53,8 @@ _URJ_CABLE(ft2232_flyswatter)
 _URJ_CABLE(ft2232_gnice)
 _URJ_CABLE(ft2232_gniceplus)
 _URJ_CABLE(ft2232_jtagkey)
+_URJ_CABLE(ft2232_jtagv3)
+_URJ_CABLE(ft2232_jtagv5)
 _URJ_CABLE(ft2232_ktlink)
 _URJ_CABLE(ft2232_milkymist)
 _URJ_CABLE(ft2232_oocdlinks)
