@@ -1,3 +1,7 @@
+2018-06-19 zmatkar <zmatkar@users.sourceforge.net>
+
+ * Enhancement#123 JTAGv3 and v5 cables driver
+
 2018-06-19 Marton Miklos <martonmiklos@users.sf.net>
  * Document the 0x to enforce hexadecimal, closes bug#112
 
